Decompiled class files because I lost the source code

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This is a small mandelbrot java applet I did yeaaaars ago.
+I actually lost the source code, so I decompiled the class files using mocha.
+This explains why the code looks odd and has no comments.  You may also find weird locale variable names.
+For some reason the buttons labels are not displayed when I run this applet on Linux... Write once, debug everywhere!
